<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".AdvancedSearchActivity">

    <TextView
        android:id="@+id/tvAdvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_advanced_search"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvAdvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvAdvTitle"
        android:layout_marginTop="20dp"
        android:text="@string/title_image_size"
        android:textIsSelectable="false"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etAdvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAdvSize"
        android:layout_alignEnd="@+id/tvAdvTitle"
        android:layout_toEndOf="@+id/tvAdvSize"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tvAdvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAdvSize"
        android:layout_marginTop="50dp"
        android:text="@string/title_color_filter"
        android:textIsSelectable="false"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etAdvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAdvColor"
        android:layout_alignEnd="@+id/etAdvSize"
        android:layout_toEndOf="@+id/tvAdvColor"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tvAdvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAdvSize"
        android:layout_marginTop="100dp"
        android:text="@string/title_image_type"
        android:textIsSelectable="false"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etAdvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAdvType"
        android:layout_alignEnd="@+id/etAdvColor"
        android:layout_toEndOf="@+id/tvAdvType"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tvAdvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etAdvSize"
        android:layout_marginTop="150dp"
        android:text="@string/title_site_filter"
        android:textIsSelectable="false"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etAdvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAdvSite"
        android:layout_alignEnd="@+id/etAdvType"
        android:layout_toEndOf="@+id/tvAdvSite"/>

    <Button
        android:id="@+id/bnAdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAdvSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:onClick="onClickSave"
        android:text="@string/save"/>

</RelativeLayout>
